test/functional/directory/gds/ts/gdssetup/lib/valid/sv_init3_inter.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# 
# HISTORY
# $Log: sv_init3_inter.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:36:22  marty
# 	Update copyright years
# 	[1996/03/10  19:39:09  marty]
#
# Revision 1.1.4.1  1995/12/11  16:51:24  root
# 	Submit
# 	[1995/12/11  16:37:21  root]
# 
# Revision 1.1.2.1  1994/08/19  13:56:40  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:44:15  marrek]
# 
# $EndLog$
#
# $RCSfile: sv_init3_inter.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:36:22 $
#

#Delete gsu_setup_file (file for readline)
rm /opt/dcelocal/var/adm/directory/gds/adm/gsu_setup_file
